<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
            <variable
                name="destino"
                type="com.example.equipo.termitransr.models.Destino"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="com.example.equipo.termitransr.Formulario">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_for"
            android:inputType="text"

            />

        <EditText
            android:id="@+id/nit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nit_for"
            android:inputType="number"

            />

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail_for"
            android:inputType="textEmailAddress"

            />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_for"
            android:inputType="date"

            />

        <Spinner
            android:id="@+id/spiner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacio_emp"
            android:entries="@array/horary"
            />


        <Button

            android:id="@+id/reserve"
            android:textSize="@dimen/sizebutton_reser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reserver_for"
            android:layout_marginTop="@dimen/space_for"
            android:onClick="pasoReserve"
            />





    </LinearLayout>
</layout>